# ASPP2021_Day2_VT

./: .readthedocs.yaml  README.md
Project/: .readthedocs.yaml  README.md  setup.cfg
Project/StackClassifier/: .gitignore  BDTBGPreds.csv  BDTPreds.csv  BDTSigPreds.csv  MLPBGPreds.csv  MLPPreds.csv  MLPSigPreds.csv  RootInterfaces.py  SimpleMLP.py  SimpleModel.py  StackedBGPreds.csv  StackedPreds.csv  StackedSigPreds.csv  Stacker.py  kNNBGPreds.csv  kNNPreds.csv  kNNSigPreds.csv  rootInterfaces.py
Project/StackClassifier/docs/: requirements.txt
Project/StackClassifier/docs/source/: conf.py  index.rst
Project/stack_classifier_Viktorth93.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day1-basics/: hello_world_VT.py  minimal.ipynb
day2-bestpractices-1/: Profiling.txt  Profiling_Euler.txt  README.md  euler72.py  euler72.py.lprof  matmult.py  matmult.py.lprof  matmult_nonnumpytoptim.py  matmult_nonnumpytoptim.py.lprof  matmult_optim.py  matmult_optim.py.lprof  matmult_simpleoptim.py.lprof
day2-bestpractices-1/animals/: __init__.py
day3-highperformance/: README.md  part1.py
day3-highperformance/ClassInheritance/: person.py
day4-bestpractices-2/: ProfileRBF.txt  Question1  README.md  customized_plotting.ipynb  cy_primes.c  cy_primes.pyx  fastloop.pyx  primes.py  primes.py.lprof  primesOptim.txt  rbf.py  rbf.py.lprof  setup.py  simple_math.py  test_simple_math.py
day4-bestpractices-2/RBF/: fastloop.c  (+2 more)
day5-datacontainers/: README.md  Scipy-slides.ipynb  army.ipynb  scipy_Linalg.py  scipy_stat_IndepDataSets.py  scipy_stat_Normal.py  scipy_stat_Poisson.py
(+14 files in other folders)
