[metadata]
# replace with your username:
name = stack-classifier-Viktorth93
version = 0.0.1
author = Viktor Thore
author_email = viktor.thoren@physics.uu.se
description = Package that builds a dataset from other datasets and trains a simple model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Viktorth93/ASPP2021_VT/tree/master/Project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
